--- a/src/app/financing/financing.component.html
+++ b/src/app/financing/financing.component.html
@@ -263,7 +263,7 @@
               </tbody>
             </table>
 
-            <div class="mt-1 col-4" style="margin-left: auto;">
+            <div style="margin-left: auto;">
               <div class="pricingTable ">
                 <div class="pricing_heading">
                     <h3 class="title"></h3>
