--- a/src/app/financing/financing.component.css
+++ b/src/app/financing/financing.component.css
@@ -551,3 +551,231 @@ h3,h6{
       margin-bottom: 35px;
   }
 }
+
+.card-bank {
+  z-index: 1000;
+  padding: 20px;
+  width: 330px;
+  min-height: 370px;
+  border-radius: 20px;
+  background: #e8e8e8;
+  box-shadow: 5px 5px 6px #dadada,
+               -5px -5px 6px #f6f6f6;
+  transition: 0.4s;
+}
+
+.card-bank:hover {
+  translate: 0 -10px;
+}
+
+.card-title {
+  font-size: 18px;
+  font-weight: 600;
+  color: #2e54a7;
+  margin: 15px 0 0 10px;
+}
+
+.card-image {
+  min-height: 170px;
+  background-color: #c9c9c9;
+  border-radius: 15px;
+  box-shadow: inset 8px 8px 10px #c3c3c3,
+            inset -8px -8px 10px #cfcfcf;
+}
+
+.card-body {
+  margin: 13px 0 0 10px;
+  color: rgb(31, 31, 31);
+  font-size: 15px;
+}
+
+.by-name {
+  font-weight: 700;
+}
+ 
+.fancy {
+  background-color: transparent;
+  border: 2px solid #377dfd;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 1.25em 2em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  transition: all 0.3s ease-in-out;
+  user-select: none;
+  font-size: 13px;
+ }
+ 
+ .fancy::before {
+  content: " ";
+  width: 1.5625rem;
+  height: 2px;
+  background: #377dfd;
+  top: 50%;
+  left: 1.5em;
+  position: absolute;
+  transform: translateY(-50%);
+  transform-origin: center;
+  transition: background 0.3s linear, width 0.3s linear;
+ }
+ 
+ .fancy .text {
+  font-size: 1.125em;
+  line-height: 1.33333em;
+  padding-left: 2em;
+  display: block;
+  text-align: left;
+  transition: all 0.3s ease-in-out;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #377dfd;
+ }
+ 
+ .fancy .top-key {
+  height: 2px;
+  width: 1.5625rem;
+  top: -2px;
+  left: 0.625rem;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, left 0.3s ease-out;
+ }
+ 
+ .fancy .bottom-key-1 {
+  height: 2px;
+  width: 1.5625rem;
+  right: 1.875rem;
+  bottom: -2px;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+ }
+ 
+ .fancy .bottom-key-2 {
+  height: 2px;
+  width: 0.625rem;
+  right: 0.625rem;
+  bottom: -2px;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+ }
+ 
+ .fancy:hover {
+  color: white;
+  background: #377dfd
+ }
+ 
+ .fancy:hover::before {
+  width: 0.9375rem;
+  background: white;
+ }
+ 
+ .fancy:hover .text {
+  color: white;
+  padding-left: 1.5em;
+ }
+ 
+ .fancy:hover .top-key {
+  left: -2px;
+  width: 0px;
+ }
+ 
+ .fancy:hover .bottom-key-1,
+  .fancy:hover .bottom-key-2 {
+  right: 0;
+  width: 0;
+ }
+
+ .modal-dialog{
+	max-width: 700px;
+}
+.modal-content{
+  z-index: 1000;
+	border: none;
+	position: relative;
+	padding: 0 !important;
+	font-size: 14px;
+	border-radius: 0;
+	-webkit-box-shadow: 0px 10px 34px -15px rgba(0,0,0,0.24);
+	-moz-box-shadow: 0px 10px 34px -15px rgba(0,0,0,0.24);
+	box-shadow: 0px 10px 34px -15px rgba(0,0,0,0.24);
+	.modal-header{
+		padding: 0;
+		border: none;
+	}
+	button.close{
+		position: absolute;
+		top: 0;
+		right: 0;
+		padding: 0;
+		margin: 0;
+		width: 40px;
+		height: 40px;
+		z-index: 1;
+		text-shadow: none;
+		background: primary;
+		color: white;
+		opacity: 1;
+	}
+	.modal-body{
+		border: none;
+		position: relative;
+		z-index: 0;
+		h2{
+			font-weight: 700;
+			text-transform: uppercase;
+			font-size: 58px;
+			span{
+				font-weight: 400;
+			}
+		}
+		h4{
+			text-transform: uppercase;
+			font-size: 16px;
+		}
+		.btn-primary{
+			color: black !important;
+			text-transform: uppercase;
+			letter-spacing: 1px;
+			font-size: 14px;
+		}
+	}
+	.text{
+		position: relative;
+		z-index: 0;
+		&:after{
+			position: absolute;
+			top: -30px;
+			left: -30px;
+			right: -30px;
+			bottom: -30px;
+			content: '';
+			border: 1px solid rgba(0,0,0,.1);
+			z-index: -1;
+		}
+	}
+	.img{
+		@include media-breakpoint-down(sm){
+			height: 300px;
+		}
+	}
+}
+
+.image-container2 {
+  background-image: url(../../assets/imagenes/Bangente2.jpg);
+  background-size: cover;
+  background-repeat: round;
+  width: 100%;
+}
